--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,16 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+   html {
+    box-sizing: border-box;
+  }
+  *, *:before, *:after {
+    box-sizing: inherit;
+  }
 
+  body {
+      border: 1px solid red;
+  }
 
 
 
