--- a/css/main.css
+++ b/css/main.css
@@ -105,29 +105,84 @@ textarea {
   }
 
   body {
-      border: 1px solid red;
+    border: 1px solid red;
+    font-family: Helvetica, Arial, sans-serif;
+    line-height: 1.6em;
+  }
+
+  img {
+    max-width: 100%;
+  }
+
+  h2 {
+
   }
 
   .page-header {
-      background-color: #000;
-      color: #fff;
-      padding: 1em;
-      width: 100%;
-      position: fixed;
-      top: 0;
+    background-color: #000;
+    color: #fff;
+    padding: 1em;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
   }
 
   .page-header h1 {
-      font-size: 1em;
-      margin: 0;
-      text-transform: uppercase;
+    font-size: 1em;
+    margin: 0;
+    text-transform: uppercase;
   }
 
   .page-header i {
-      float: right;
+    position: absolute;
+    top: 1em;
+    right: 1em;
   }
 
-  
+  .main-content {
+    overflow: auto;
+  }
+
+  .latest-work {
+    overflow: auto;
+    border: 5px solid blue;
+  }
+
+  .projects {
+    border: 1px solid red;
+    background-color: rgba(199, 199, 199, 0.75);
+    width: 50%;
+    height: auto;
+    float: left;
+    position: relative;
+  }
+
+  .proj-background {
+    border: 1px solid blue;
+    display: block;
+    position: relative;
+    z-index: -10;
+    width: 100%;
+    height: 100%;
+  }
+
+  .proj-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+
+  .proj-content h3 {
+    margin: 0;
+  }
+
+  footer {
+    clear: both;
+    text-align: center;
+  }
 
 
 
