--- a/css/main.css
+++ b/css/main.css
@@ -105,7 +105,6 @@ textarea {
   }
 
   body {
-    border: 1px solid red;
     font-family: Helvetica, Arial, sans-serif;
     line-height: 1.6em;
   }
@@ -115,7 +114,17 @@ textarea {
   }
 
   h2 {
+    font-size: 1em;
+  }
 
+  a {
+    text-decoration: none;
+  }
+
+  section {
+    margin: 1em;
+    padding: 1.5em 0;
+    border-bottom: 2px solid #ddd;
   }
 
   .page-header {
@@ -126,12 +135,17 @@ textarea {
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 10;
   }
 
   .page-header h1 {
     font-size: 1em;
     margin: 0;
     text-transform: uppercase;
+  }
+
+  .page-header a {
+    color: #fff;
   }
 
   .page-header i {
@@ -144,13 +158,47 @@ textarea {
     overflow: auto;
   }
 
+  .bold-info {
+    position: relative;
+  }
+
+  .bold-info h2 {
+    font-size: 3em;
+    line-height: 1em;
+  }
+
+  .bold-info a {
+    border: 3px solid #fff;
+    font-size: 1.25em;
+    padding: 1em;
+    color: #fff;
+  }
+
+  .bold-info a:hover {
+    background-color: #fff;
+    color: #000;
+  }
+
+  .bold-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: #fff;
+  }
+
+  .bold-background {
+    width: 100%;
+    max-height: 30em;
+  }
+
   .latest-work {
     overflow: auto;
-    border: 5px solid blue;
   }
 
   .projects {
-    border: 1px solid red;
+    border: 2px solid #fff;
     background-color: rgba(199, 199, 199, 0.75);
     width: 50%;
     height: auto;
@@ -158,8 +206,24 @@ textarea {
     position: relative;
   }
 
+  .projects h3 {
+    margin: 0;
+    font-size: 1em;
+  }
+
+  .projects a {
+    color: #000;
+  }
+
+  .projects a:hover {
+    color: #fff;
+  }
+
+  .projects:hover {
+    background-color: rgb(255, 255, 255, 0);
+  }
+
   .proj-background {
-    border: 1px solid blue;
     display: block;
     position: relative;
     z-index: -10;
@@ -175,24 +239,11 @@ textarea {
     text-align: center;
   }
 
-  .proj-content h3 {
-    margin: 0;
-  }
-
   footer {
     clear: both;
     text-align: center;
+    padding: 1em;
   }
-
-
-
-
-
-
-
-
-
-
 
 /* ==========================================================================
    Helper classes
